--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,7 @@ layout: default
   {{ content }}
 </div>
 
-<!-- In the mean time, no need to use related posts ;) -->
-<!-- <div class="related">
+<div class="related">
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
@@ -20,4 +19,3 @@ layout: default
     {% endfor %}
   </ul>
 </div>
- -->
