--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,11 @@ layout: default
   <h2>{{ page.title }}</h2>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+
+  <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-url="http://tiagoamaro.com.br{{page.url}}" data-via="tiagocis" data-text="{{page.title}}">Tweet</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
+
 
 <div class="related">
   <h2>Related Posts</h2>
