Updating site lead

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       <div class="masthead-inner">
         <span id="name">Tiago Amaro</span>
         <p class="lead">
-          <span class="dev">dev</span> && ruby && <span class="geek">geek</span>
+          Ideas && Dev
         </p>
 
         <div class="colophon">
