Updating sidebar jekyll, hyde and github pages references

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
           </ul>
           <p>
             <small>
-              &copy;2014. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://andhyde.com" target="_blank">Hyde</a>, and hosted in <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
+              &copy;2014. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://andhyde.com" target="_blank">Hyde</a> and <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
             </small>
           </p>
           <p class="social-networks">
