Updating to Hyde 2.1.0 (writing new theme and writing some custom css)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,10 @@
   </script>
 
   <!-- CSS -->
+  <link rel="stylesheet" href="/public/css/poole.css">
+  <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/hyde.css">
+  <link rel="stylesheet" href="/public/css/custom.css">
   <link rel="stylesheet" href="/public/css/font-awesome.min.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700|Berkshire+Swash">
 
