--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,33 +1,44 @@
-<header class="masthead">
-  <div class="masthead-inner">
-    <span id="name">Tiago Amaro</span>
-    <p class="lead">
-      Ideas && Dev
+<div class="sidebar">
+  <div class="container sidebar-sticky">
+    <div class="sidebar-about">
+      <h1>Tiago Amaro</h1>
+      <p class="lead">Ideas && Dev</p>
+    </div>
+
+    <nav class="sidebar-nav">
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+
+      {% comment %}
+        The code below dynamically generates a sidebar nav of pages with
+        `layout: page` in the front-matter. See readme for usage.
+      {% endcomment %}
+
+      {% assign pages_list = site.pages %}
+      {% for node in pages_list %}
+        {% if node.title != null %}
+          {% if node.layout == "page" %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+    </nav>
+
+    <p>
+      <small>
+        &copy; 2015. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://andhyde.com" target="_blank">Hyde</a> and <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
+      </small>
     </p>
 
-    <div class="colophon">
-      <ul class="colophon-links">
-        <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="/twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
-        <li><a href="/instagram"><i class="fa fa-instagram"></i> Instagram</a></li>
-        <li><a href="/about"><i class="fa fa-paperclip"></i> About</a></li>
-      </ul>
-      <p>
-        <small>
-          &copy;2015. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://andhyde.com" target="_blank">Hyde</a> and <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
-        </small>
-      </p>
-      <p class="social-networks">
-        <a href="https://github.com/tiagoamaro">
-          <i class="fa fa-github fa-2x"></i>
-        </a>
-        <a href="http://twitter.com/tiagocis">
-          <i class="fa fa-twitter fa-2x"></i>
-        </a>
-        <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd">
-          <img src="/public/images/doom_marine.gif" alt="doom marine" id="doom">
-        </a>
-      </p>
-    </div>
+    <p id="social-networks">
+      <a href="https://github.com/tiagoamaro">
+        <i class="fa fa-github fa-2x"></i>
+      </a>
+      <a href="http://twitter.com/tiagocis">
+        <i class="fa fa-twitter fa-2x"></i>
+      </a>
+      <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd">
+        <img src="/public/images/doom_marine.gif" alt="doom marine" id="doom">
+      </a>
+    </p>
   </div>
-</header>
+</div>
