JS of instafeed and konami are too small to need async

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
   </title>
 
   <!-- JS -->
-  <script async src="/public/js/instafeed.min.js"></script>
-  <script async src="/public/js/konami.js"></script>
+  <script src="/public/js/instafeed.min.js"></script>
+  <script src="/public/js/konami.js"></script>
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-34472531-1']);
