--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
 
     <p>
       <small>
-        &copy; 2015. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://andhyde.com" target="_blank">Hyde</a> and <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
+        &copy; {{ site.time | date: '%Y' }}. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://andhyde.com" target="_blank">Hyde</a> and <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
       </small>
     </p>
 
