--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,28 +4,9 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
+
   <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="twitter">{% include twitter_button.html %}</span>
+
   {{ content }}
-</div>
-
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
-
-<div class="comments">
-  <h2>Social</h2>
-  {% include twitter_button.html %}
-  {% include disqus.html %}
 </div>
