--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 
   <!-- JS -->
   <script src="/public/js/instafeed.min.js"></script>
-  <script src="/public/js/konami.js"></script>
+  <script src="/public/js/cheet.js"></script>
   <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
