--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,15 +17,7 @@
   <!-- JS -->
   <script src="/public/js/instafeed.min.js"></script>
   <script src="/public/js/cheet.js"></script>
-  <script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-34472531-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+  <script src="/public/js/google_analytics.js"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="/public/css/poole.css">
