--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,7 +33,7 @@
       <a href="https://github.com/tiagoamaro">
         <i class="fa fa-github fa-2x"></i>
       </a>
-      <a href="http://twitter.com/tiagocis">
+      <a href="http://twitter.com/tiagopadrela">
         <i class="fa fa-twitter fa-2x"></i>
       </a>
       <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd">
