--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   </title>
 
   <!-- JS -->
-  <script src="/public/js/instafeed.min.js"></script>
+  <script src="/public/js/instafeed.js"></script>
   <script src="/public/js/cheet.js"></script>
   <script src="/public/js/google_analytics.js"></script>
 
