move favicon to its own folder

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Berkshire+Swash">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="/public/favicon.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/favicons/touch-icon-144-precomposed.png">
+  <link rel="shortcut icon" href="/public/favicons/favicon.png">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
