replace font-awesome to icomoon subset

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/hyde.css">
   <link rel="stylesheet" href="/public/css/custom.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/public/css/icomoon.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Berkshire+Swash">
 
   <!-- Icons -->
