--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,10 +31,10 @@
 
     <p id="social-networks">
       <a href="https://github.com/tiagoamaro">
-        <i class="fa fa-github fa-2x"></i>
+        <i class="icon-github icon-2x"></i>
       </a>
       <a href="http://twitter.com/tiagopadrela">
-        <i class="fa fa-twitter fa-2x"></i>
+        <i class="icon-twitter icon-2x"></i>
       </a>
       <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd">
         <img src="/public/images/doom_marine.gif" alt="doom marine" id="doom">
