defer marine gif loading (as background image)

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -44,7 +44,10 @@
 }
 
 #easter_egg {
+  background-image: url(/public/images/doom_marine.gif);
   display: none;
+  height: 32px;
+  width: 28px;
 }
 
 /* Content */
