--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,9 +36,7 @@
       <a href="http://twitter.com/tiagopadrela">
         <i class="icon-twitter icon-2x"></i>
       </a>
-      <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd">
-        <img src="/public/images/doom_marine.gif" alt="doom marine" id="doom">
-      </a>
+      <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd"></a>
     </p>
   </div>
 </div>
