make links easier to find

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,13 @@
+/* Overrides */
+
+a {
+  text-decoration: underline;
+}
+
+a:hover {
+  font-weight: bold;
+}
+
 /* Themes */
 
 .theme-base-10 .sidebar {
