use npmcdn to load external JS

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,8 @@
   </title>
 
   <!-- JS -->
-  <script src="/public/js/instafeed.js"></script>
-  <script src="/public/js/cheet.js"></script>
+  <script src="https://npmcdn.com/cheet.js@0.3.3/cheet.min.js"></script>
+  <script src="/public/js/easter_egg.js"></script>
   <script src="/public/js/google_analytics.js"></script>
 
   <!-- CSS -->
