use CDNized bootstrap

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,16 +25,16 @@
 
     <p>
       <small>
-        &copy; {{ site.time | date: '%Y' }}. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://andhyde.com" target="_blank">Hyde</a>. Hosted with <span class="icon-heart-o"></span> on <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
+        &copy; {{ site.time | date: '%Y' }}. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://andhyde.com" target="_blank">Hyde</a>. Hosted with <span class="fa fa-heart-o"></span> on <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
       </small>
     </p>
 
     <p id="social-networks">
       <a href="https://github.com/tiagoamaro">
-        <i class="icon-github icon-2x"></i>
+        <i class="fa fa-github fa-2x"></i>
       </a>
       <a href="http://twitter.com/tiagopadrela">
-        <i class="icon-twitter icon-2x"></i>
+        <i class="fa fa-twitter fa-2x"></i>
       </a>
       <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd"></a>
     </p>
