use basscss as CSS framework

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
 <!-- CSS -->
 <link rel="stylesheet" href="/public/css/syntax.css">
 <link rel="stylesheet" href="/public/css/theme.css">
+<link rel="stylesheet" href="https://npmcdn.com/basscss@8.0.1/css/basscss.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Berkshire+Swash">
 
