--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,10 @@
   <body>
     {% include topbar.html %}
 
-    <div class="content container">
-      {{ content }}
+    <div class="max-width-4 mx-auto pb4">
+      <div class="clearfix">
+        {{ content }}
+      </div>
     </div>
 
     {% include footer.html %}
