--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer>
+<footer class="max-width-4 mx-auto">
   Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>. Hosted with <span class="fa fa-heart-o"></span> on <a href="http://pages.github.com/" target="_blank">Github Pages</a>. {{ site.time | date: '%Y' }}.
 </footer>
