--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,26 +1,24 @@
-<div class="sidebar">
-  <div class="container sidebar-sticky">
-    <div class="sidebar-about">
+<div class="max-width-4 mx-auto">
+  <div class="topbar-about">
+    <a href="/">
       <h1>Tiago Amaro</h1>
-      <p class="lead">Geek, Programmer, Explainer wannabe</p>
-    </div>
-
-    <nav class="sidebar-nav">
-      <a class="sidebar-nav-item {% if page.url == "/" %}active{% endif %}" href="/">Home</a>
-
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
-
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-    </nav>
+    </a>
+    <small>(Geek, Programmer, Explainer wannabe)</small>
   </div>
+
+  <nav>
+    {% comment %}
+      The code below dynamically generates a topbar nav of pages with
+      `layout: page` in the front-matter. See readme for usage.
+    {% endcomment %}
+
+    {% assign pages_list = site.pages %}
+    {% for node in pages_list %}
+      {% if node.title != null %}
+        {% if node.layout == "page" %}
+          <a class="{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+  </nav>
 </div>
