implement mobile friendly sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,13 +23,13 @@
       {% endfor %}
     </nav>
 
-    <p>
+    <p class="sidebar-copyright">
       <small>
         &copy; {{ site.time | date: '%Y' }}. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://andhyde.com" target="_blank">Hyde</a>. Hosted with <span class="fa fa-heart-o"></span> on <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
       </small>
     </p>
 
-    <p id="social-networks">
+    <p class="social-networks">
       <a href="https://github.com/tiagoamaro">
         <i class="fa fa-github fa-2x"></i>
       </a>
@@ -38,5 +38,9 @@
       </a>
       <a id="easter_egg" href="https://www.google.com.br/?#q=iddqd"></a>
     </p>
+
+    <div class="mobile-menu-arrow">
+      <i class="fa fa-angle-down fa-2x"></i>
+    </div>
   </div>
 </div>
