--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,10 +15,10 @@
   </title>
 
   <!-- JS -->
-  <script src="https://npmcdn.com/cheet.js@0.3.3/cheet.min.js"></script>
-  <script src="/public/js/mobile_menu.js"></script>
-  <script src="/public/js/easter_egg.js"></script>
-  <script src="/public/js/google_analytics.js"></script>
+  <script src="https://npmcdn.com/cheet.js@0.3.3/cheet.min.js" async="true"></script>
+  <script src="/public/js/mobile_menu.js" async="true"></script>
+  <script src="/public/js/easter_egg.js" async="true"></script>
+  <script src="/public/js/google_analytics.js" async="true"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="/public/css/poole.css">
