load fonts asynchronously

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   {% include head.html %}
 
   <body class="theme-base-10">
+    {% include deferred_styles.html %}
 
     {% include sidebar.html %}
 
