use meta tag to google site verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,9 @@
     <meta name="description" content="Tiago Amaro personal website. Geek, Programmer, Explainer wannabe. Twitter: @tiagopadrela">
   {% endif %}
 
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="CrTb9gh58eyZP1KbE3xvLvbDoksvSWT0llEMhNNE9os" />
+
   <title>
     {% if page.title %}{{ page.title }} | {% endif %}
     Tiago Amaro
