point to current hyde repository

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
 
     <p class="sidebar-copyright">
       <small>
-        &copy; {{ site.time | date: '%Y' }}. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://andhyde.com" target="_blank">Hyde</a>. Hosted with <span class="fa fa-heart-o"></span> on <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
+        &copy; {{ site.time | date: '%Y' }}. Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/poole/hyde" target="_blank">Hyde</a>. Hosted with <span class="fa fa-heart-o"></span> on <a href="http://pages.github.com/" target="_blank">Github Pages</a>.
       </small>
     </p>
 
