--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>Tiago Amaro</h1>
-      <p class="lead">Geek, Programmer, Explainer wannabe</p>
+      <p class="lead">Geek and coder</p>
     </div>
 
     <nav class="sidebar-nav">
