Add middle name

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 
   <title>
     {% if page.title %}{{ page.title }} | {% endif %}
-    Tiago Amaro
+    Tiago Padrela Amaro
   </title>
 
   <!-- CSS -->
