--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>Tiago Amaro</h1>
+      <h1>Tiago Padrela Amaro</h1>
       <p class="lead">Geek and coder</p>
     </div>
 
