Include reading time using liquid filters
Thanks Carlos Becker https://carlosbecker.com/posts/jekyll-reading-time-without-plugins/ !

--- a/_scss/custom.scss
+++ b/_scss/custom.scss
@@ -105,3 +105,9 @@ a:hover {
   float: left;
   margin-right: 20px;
 }
+
+.post .reading-time {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  font-size: small;
+}
