--- a/_scss/custom.scss
+++ b/_scss/custom.scss
@@ -34,6 +34,10 @@ a:hover {
   line-height: 2.0;
 }
 
+.sidebar .devto-logo {
+  fill: white;
+}
+
 /* Sidebar Responsive */
 
 .sidebar .mobile-menu-arrow {
