Posts are now on their own page. Index is Twitter timeline.

--- a/_scss/custom.scss
+++ b/_scss/custom.scss
@@ -99,6 +99,14 @@ a:hover {
   margin-bottom: 20px;
 }
 
+.posts {
+  padding-left: 18px;
+}
+
+.posts li {
+  margin-top: 10px;
+}
+
 /* Instafeed and Twitter */
 
 .twitter-timeline-container {
