--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Tiago Padrela Amaro personal website. Geek and coder. Twitter: @tiagopadrela">
   {% endif %}
 
+  {% seo %}
+
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="R0IzQeYRkG8i9_d7_jq546RZ589H33qJwAs8X_EH23M" />
 
