--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,8 +29,6 @@
       </small>
     </p>
 
-    <div class="mobile-menu-arrow">
-      <i class="fa fa-angle-down fa-2x"></i>
-    </div>
+    <div class="mobile-menu-arrow mobile-menu-arrow-up"></div>
   </div>
 </div>
