--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,6 +29,8 @@
       </small>
     </p>
 
+    <a id="easter_egg" href="https://en.wikipedia.org/wiki/Doom_(1993_video_game)"></a>
+
     <div class="mobile-menu-arrow mobile-menu-arrow-up"></div>
   </div>
 </div>
